2005-03-26  Sven Neumann  <sven@gimp.org>

	* modules/cdisplay_lcms.c: disconnect from the config in dispose
	instead of in finalize.

2005-03-25  Sven Neumann  <sven@gimp.org>

	* plug-ins/bmp/bmpread.c: better error message (bug #171646).

2005-03-25  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpdockable.c (gimp_dockable_add): initialize the
	tab style to a supported one. Fixes bug #171567.

2005-03-25  Sven Neumann  <sven@gimp.org>

	* plug-ins/bmp/bmpread.c: applied patch from David Costanzo that
	initializes unspecified pixels in RLE bitmaps. Fixes bug #171562.

2005-03-25  Sven Neumann  <sven@gimp.org>

	* app/dialogs/file-save-dialog.c
	* app/widgets/gimpfiledialog.[ch]: moved overwrite confirmation
	dialog to app/widgets.

	* app/widgets/gimpdnd-xds.c: set "Untitled.xcf" as default name
	for untitled images; ask for confirmation before overwriting a
	local file.

2005-03-25  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* plug-ins/common/emboss.c: fix usage of RGBA data,
	change to premultiplied alpha for embossing, hopefully
	fixes bug #72864.

2005-03-25  Sven Neumann  <sven@gimp.org>

	* app/core/gimpmarshal.list: added VOID: OBJECT, OBJECT.

	* app/widgets/gimpview.[ch]: pass old and new viewable in the
	"set-viewable" signal.

	* app/widgets/gimptoolbox-image-area.c: don't add the XDS drag source
	more than once.

2005-03-25  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpdnd-xds.c (gimp_dnd_xds_save_image): in case of
	an error, answer with E (error) instead of F (failure).

2005-03-25  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpview.[ch]: virtualized GimpView::set_viewable.

	* app/widgets/gimptoolbox-image-area.c: hook into "set_viewable"
	and add an XDS drag source.

	* app/widgets/gimpdnd-xds.c
	* app/widgets/gimpdnd.c: unset the XdndDirectSave0 property when
	the drag ends, minor cleanups.

	* app/widgets/gimpimageview.c: removed unused function prototype.

2005-03-25  Sven Neumann  <sven@gimp.org>

	* app/widgets/Makefile.am