@@ -1,5 +1,12 @@
 2005-03-26  Sven Neumann  <sven@gimp.org>
 
+	* modules/cdisplay_colorblind.c: applied a modified version of
+	a patch by Gautier Portet that introduces a LUT for the gamma
+	correction (bug #101256). Also moved constants out of the
+	CdisplayColorblind struct.
+
+2005-03-26  Sven Neumann  <sven@gimp.org>
+
 	* modules/cdisplay_lcms.c: disconnect from the config in dispose
 	instead of in finalize.
 
